...
    llibre: Llibre,
    onEdit: () -> Unit,
    onEliminar: () -> Unit
) {
    Card(Modifier
        .fillMaxWidth()
        .testTag("bookCard")
    ) {
        Column(Modifier.padding(12.dp)) {
            Row(
                horizontalArrangement = Arrangement.spacedBy(12.dp),
                verticalAlignment = Alignment.CenterVertically
            ) {
...
